--- a/generators/content_type/data/%name%.yml.tt
+++ b/generators/content_type/data/%name%.yml.tt
@@ -1,6 +1,24 @@
 <% 4.times do |i| -%>
 - "Sample <%= i + 1 %>":
 <% config[:fields][1..-1].each do |field| -%>
-    <%= field.name -%>: <some value from Faker>
+<% case field.type -%>
+<% when 'string' -%>
+    <%= field.name -%>: "<%= Faker::Lorem.sentence -%>"
+<% when 'text' -%>
+    <%= field.name -%>: "<%= Faker::Lorem.paragraph -%>"
+<% when 'select' -%>
+    <%= field.name -%>: null # Use the value of a select option defined in the app/content_types/<%= config[:name] -%>.rb file.
+<% when 'boolean' -%>
+    <%= field.name -%>: true # Or false
+<% when 'date' -%>
+    <%= field.name -%>: <%= Time.now.strftime('%Y/%M/%d') -%> # YYYY/MM/DD
+<% when 'file' -%>
+    <%= field.name -%>: null # Path to a file in the public/samples folder or to a remote and external file.
+<% when 'belongs_to' -%>
+    <%= field.name -%>: null # Permalink of the target entry
+<% when 'many_to_many' -%>
+    <%= field.name -%>: [] # Permalink of the target entries
 <% end -%>
+<% end -%>
+
 <% end -%>
