--- a/generators/foundation/app/views/pages/index.liquid
+++ b/generators/foundation/app/views/pages/index.liquid
@@ -1,3 +1,7 @@
+---
+title: Home page
+published: true
+---
 <!DOCTYPE html>
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
