add some tests to prove the nav is working (issue #30)

--- a/spec/fixtures/default/app/views/pages/index.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/index.liquid.haml
@@ -30,7 +30,7 @@ title: Home page
   %body
     .container
       #menu
-        #nav
+        %ul#nav
           %li#home{ :class => "{% if page.fullpath == 'index' %}on{% endif %} link" }
             %a{ :href => '/' } Home
           {% nav site, no_wrapper: true, exclude: 'events' %}
