therubyracer is required for unix systems (not windows)

--- a/generators/bootstrap/Gemfile.tt
+++ b/generators/bootstrap/Gemfile.tt
@@ -6,9 +6,10 @@ gem 'locomotivecms_wagon', '<%= config[:version] -%>'
 
 group :development do
   # Mac OS X
-  gem 'rb-fsevent', '~> 0.9.1', :require => RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
+  gem 'rb-fsevent', '~> 0.9.1', require: RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
 
-  # TODO: Linux
+  # Unix
+  gem 'therubyracer', require: 'v8', platforms: :ruby
 
   # TODO: Windows
 end
