--- a/generators/blank/Gemfile.tt
+++ b/generators/blank/Gemfile.tt
@@ -8,7 +8,7 @@ group :development do
   # Mac OS X
   gem 'rb-fsevent', '~> 0.9.1', require: RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
 
-  # Linux
+  # Unix
   gem 'therubyracer', require: 'v8', platforms: :ruby
 
   # TODO: Windows
