--- a/generators/page/template.liquid.tt
+++ b/generators/page/template.liquid.tt
@@ -1,1 +1,34 @@
-TEST LIQUID
+---
+title: <%= config[:slug].humanize -%>
+<% if config[:translated] %>
+
+# unique identifier for urls, the same as a permalink
+slug: <%= config[:slug] -%>
+<% end %>
+
+# true if the page is included in the menu
+listed: true
+
+# true if the page is published
+published: true
+
+# position among sibling pages
+# position: 1
+
+# sets a redirection to the given url (301)
+# redirect_url: "<url to a page or to a remote url>"
+
+# content type that this page is templatizing
+# content_type: "<slug of one of the content types>"
+
+# editable_elements:
+#   'some_block/some_slug': "<text>"
+#   'some_block/some_slug': "<relative path to the file under the public/samples folder>"
+---
+{% extends parent %}
+
+{% block main %}
+
+  <p>Hello world</p>
+
+{% endblock %}
