--- a/generators/foundation/app/views/pages/index.liquid.haml
+++ b/generators/foundation/app/views/pages/index.liquid.haml
@@ -20,7 +20,7 @@ published: true
     .row
       .large-12.columns
         %h2 Welcome to Foundation
-        %p This is version 4.0.9.
+        %p This is version 4.1.6
         %hr/
     {% block 'main' %}
     .row
