--- a/generators/foundation/app/views/pages/index.liquid
+++ b/generators/foundation/app/views/pages/index.liquid
@@ -23,7 +23,7 @@ published: true
   <div class="row">
     <div class="large-12 columns">
       <h2>Welcome to Foundation</h2>
-      <p>This is version 4.0.9.</p>
+      <p>This is version 4.1.6</p>
       <hr />
     </div>
   </div>
