--- a/spec/fixtures/default/app/views/pages/songs/template.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/songs/template.liquid.haml
@@ -10,4 +10,7 @@ content_type: songs
 
 %p {{ song.short_description }}
 
+#is_templatized{templatized: "{{ page.templatized? }}"}
+#content_type_size{content_type_size: "{{ page.content_type.size }}"}
+
 {% endblock %}
