--- a/spec/fixtures/default/app/views/pages/music.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/music.liquid.haml
@@ -24,5 +24,5 @@ position: 2
     {% for song in contents.songs offset: 4 %}
     {% include 'song' with song %}
     {% endfor %}
-
+#is_listed{listed: "{{ page.listed? }}"}
 {% endblock %}
