--- a/spec/fixtures/default/app/views/pages/index.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/index.liquid.haml
@@ -90,6 +90,7 @@ title: Home page
 
       #footer
         #is_templatized{templatized: "{{ page.templatized? }}"}
+        #scoped_translation{scoped_translation: "{{ 'fr' | translate: 'en', 'locomotive.locales' }}"}
 		
         %p {% locale_switcher %}
 
