fixes #47: added rb-inotify for linux and wdm for windows

--- a/generators/blank/Gemfile.tt
+++ b/generators/blank/Gemfile.tt
@@ -10,8 +10,10 @@ group :development do
 
   # Unix
   gem 'therubyracer', require: 'v8', platforms: :ruby
+  gem 'rb-inotify', '~> 0.9', require: RUBY_PLATFORM.include?('linux') && 'rb-inotify'
 
-  # TODO: Windows
+  # Windows
+  gem 'wdm', '>= 0.1.0', require: RUBY_PLATFORM =~ /mswin|mingw/i && 'wdm'
 end
 
 group :misc do
