--- a/generators/foundation/Gemfile.tt
+++ b/generators/foundation/Gemfile.tt
@@ -6,12 +6,14 @@ gem 'locomotivecms_wagon', '<%= config[:version] -%>'
 
 group :development do
   # Mac OS X
-  gem 'rb-fsevent', '~> 0.9.1', :require => RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
+  gem 'rb-fsevent', '~> 0.9.1', require: RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
 
   # Unix
   gem 'therubyracer', require: 'v8', platforms: :ruby
+  gem 'rb-inotify', '~> 0.9', require: RUBY_PLATFORM.include?('linux') && 'rb-inotify'
 
-  # TODO: Windows
+  # Windows
+  gem 'wdm', '>= 0.1.0', require: RUBY_PLATFORM =~ /mswin|mingw/i && 'wdm'
 end
 
 group :misc do
