--- a/spec/fixtures/default/app/views/pages/songs/template.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/songs/template.liquid.haml
@@ -12,5 +12,6 @@ content_type: songs
 
 #is_templatized{templatized: "{{ page.templatized? }}"}
 #content_type_size{content_type_size: "{{ page.content_type.size }}"}
+#content_type_count{content_type_count: "{{ page.content_type.count }}"}
 
 {% endblock %}
