--- a/generators/cloned/config/deploy.yml.tt
+++ b/generators/cloned/config/deploy.yml.tt
@@ -1,4 +1,8 @@
 production:
   host: <%= config[:host] %>
+<% if config[:email] -%>
   email: <%= config[:email] %>
   password: <%= config[:password] %>
+<% elsif config[:api_key] -%>
+  api_key: <%= config[:api_key] -%>
+<% end -%>
