Updated foundation template to 4.2.1
Html/haml markup unchanged except for commented new js plugin
interchange. Comment foundation.min.js and un-comment individal plugins
at will.

--- a/generators/foundation/app/views/pages/index.liquid
+++ b/generators/foundation/app/views/pages/index.liquid
@@ -23,7 +23,7 @@ published: true
   <div class="row">
     <div class="large-12 columns">
       <h2>Welcome to Foundation</h2>
-      <p>This is version 4.0.9.</p>
+      <p>This is version 4.2.1</p>
       <hr />
     </div>
   </div>
@@ -142,6 +142,8 @@ published: true
   {{ 'foundation/foundation.tooltips.js' | javascript_tag }}
 
   {{ 'foundation/foundation.topbar.js' | javascript_tag }}
+
+  {{ 'foundation/foundation.interchange.js' | javascript_tag }}
 
   -->
 
