--- a/generators/foundation/app/views/pages/index.liquid.haml
+++ b/generators/foundation/app/views/pages/index.liquid.haml
@@ -20,7 +20,7 @@ published: true
     .row
       .large-12.columns
         %h2 Welcome to Foundation
-        %p This is version 4.0.9.
+        %p This is version 4.2.1
         %hr/
     {% block 'main' %}
     .row
@@ -96,34 +96,36 @@ published: true
 
     {{ 'foundation.min.js' | javascript_tag }}
 
-    /
-      {{ 'foundation/foundation.js' | javascript_tag }}
+    
+      / {{ 'foundation/foundation.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.alerts.js' | javascript_tag }}
+      / {{ 'foundation/foundation.alerts.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.clearing.js' | javascript_tag }}
+      / {{ 'foundation/foundation.clearing.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.cookie.js' | javascript_tag }}
+      / {{ 'foundation/foundation.cookie.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.dropdown.js' | javascript_tag }}
+      / {{ 'foundation/foundation.dropdown.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.forms.js' | javascript_tag }}
+      / {{ 'foundation/foundation.forms.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.joyride.js' | javascript_tag }}
+      / {{ 'foundation/foundation.joyride.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.magellan.js' | javascript_tag }}
+      / {{ 'foundation/foundation.magellan.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.orbit.js' | javascript_tag }}
+      / {{ 'foundation/foundation.orbit.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.placeholder.js' | javascript_tag }}
+      / {{ 'foundation/foundation.placeholder.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.reveal.js' | javascript_tag }}
+      / {{ 'foundation/foundation.reveal.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.section.js' | javascript_tag }}
+      / {{ 'foundation/foundation.section.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.tooltips.js' | javascript_tag }}
+      / {{ 'foundation/foundation.tooltips.js' | javascript_tag }}
 
-      {{ 'foundation/foundation.topbar.js' | javascript_tag }}
+      / {{ 'foundation/foundation.topbar.js' | javascript_tag }}
+
+      / {{ 'foundation/foundation.interchange.js' | javascript_tag }}
 
     :javascript
       $(document).foundation();
