--- a/generators/bootstrap/app/views/pages/index.liquid
+++ b/generators/bootstrap/app/views/pages/index.liquid
@@ -11,6 +11,13 @@ published: true
     <meta name="description" content="{{ site.meta_description }}">
     <meta name="keywords" content="{{ site.meta_keywords }}">
 
+	<!-- Fonts -->
+	{{ 'fonts/awesome.css' | stylesheet_tag }}
+	{{ 'fonts/font-awesome.css' | stylesheet_tag }}
+    <!--[if IE 7]>
+      {{ 'fonts/font-awesome-ie7.min.css' | stylesheet_tag }}
+    <![endif]-->
+
     <!-- Le styles -->
     {{ 'bootstrap.css' | stylesheet_tag }}
     {{ 'bootstrap-responsive.css' | stylesheet_tag }}
@@ -42,7 +49,7 @@ published: true
       <div class="jumbotron">
         <h1>Super awesome marketing speak!</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+        <a class="btn btn-large btn-success icon-flag" href="#">Sign up today</a>
       </div>
 
       <hr>
