.all method for content_type drop to evaluate collection inside of scope (fixes #74)

--- a/spec/fixtures/default/app/views/pages/music.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/music.liquid.haml
@@ -25,4 +25,12 @@ position: 2
     {% include 'song' with song %}
     {% endfor %}
 #is_listed{listed: "{{ page.listed? }}"}
+#test_for_scope
+  {% with_scope _slug: "song-3" %}
+  {% assign selected_songs = contents.songs.all %}
+  {% endwith_scope %}
+  {% for s in selected_songs %}
+  %p.scoped_song {{ s._label }}
+  {% endfor %}
+  %p.collection_equality {{ contents.songs.all.size }}={{ contents.songs.size }}
 {% endblock %}
