implementation of the link_to liquid tag (wip)

--- a/spec/fixtures/default/app/views/pages/about_us.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/about_us.liquid.haml
@@ -2,6 +2,7 @@
 title: About Us
 listed: true
 position: 1
+handle: about-us
 editable_elements:
   'banner/page_image': "/samples/photo_2.jpg"
   'banner/pitch': "<h2>About us</h2><p>Lorem ipsum...</p>"
