by default, for the generated new sites, add the inline_editor tag

--- a/generators/bootstrap/app/views/pages/index.liquid.haml
+++ b/generators/bootstrap/app/views/pages/index.liquid.haml
@@ -27,6 +27,8 @@ published: true
     / HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+    {% inline_editor %}
   %body
 
     .container-narrow
