by default, for the generated new sites, add the inline_editor tag (missing file)

--- a/generators/bootstrap/app/views/pages/index.liquid
+++ b/generators/bootstrap/app/views/pages/index.liquid
@@ -27,6 +27,8 @@ published: true
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    {% inline_editor %}
   </head>
 
   <body>
