make the link_to fail decently if pages are not translated

--- a/spec/fixtures/default/app/views/snippets/song.fr.liquid.haml
+++ b/spec/fixtures/default/app/views/snippets/song.fr.liquid.haml
@@ -1,5 +1,5 @@
 %li
-  %h3 {{ song.title }}
+  %h3 {% link_to song, with: a-song-template %}
   .cover {{ song.cover.url | image_tag }}
   .info
     {{ song.short_description }}
