--- a/spec/fixtures/default/app/views/pages/index.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/index.liquid.haml
@@ -22,6 +22,7 @@ title: Home page
     <link href="/fonts/chunkfive.css" media="screen" rel="stylesheet" type="text/css" />
 
     / Le styles
+    {{ 'http://fonts.googleapis.com/css?family=Open+Sans:400,700' | stylesheet_tag }}
     {{ 'reboot' | stylesheet_tag }}
     {{ 'application' | stylesheet_tag }}
     %script{ :src => "{{ 'application.js' | javascript_url }}", :type => 'text/javascript' }
