--- a/generators/foundation/app/views/snippets/footer.liquid.haml
+++ b/generators/foundation/app/views/snippets/footer.liquid.haml
@@ -5,19 +5,18 @@
     %p
       Foundation is made by
       = succeed "," do
-        %a{:href => "http://www.zurb.com/"} ZURB
-      a product design company in Campbell, California. We've put more than 14 years of experience building web products, services and websites into this framework.
-      %a{:href => "http://foundation.zurb.com/about.php"} Foundation Info and Goodies →
+        %a{href: "http://www.zurb.com/"} ZURB
+      %a{href: "http://foundation.zurb.com/about.php"} Foundation Info and Goodies →
   .large-3.columns
     %h6
       %strong Using Foundation?
     %p
       Let us know how you're using Foundation and we might feature you as an example!
-      %a{:href => "mailto:foundation@zurb.com?subject=I'm%20using%20Foundation"} Get in touch →
+      %a{href: "mailto:foundation@zurb.com?subject=I'm%20using%20Foundation"} Get in touch →
   .large-4.columns
     %h6
       %strong Need some help?
     %p
       For answers or help visit the
       = succeed "." do
-        %a{:href => "http://foundation.zurb.com/docs/support.html"} Support page
+        %a{href: "http://foundation.zurb.com/docs/support.html"} Support page
