--- a/generators/bootstrap3/app/views/pages/index.liquid.haml
+++ b/generators/bootstrap3/app/views/pages/index.liquid.haml
@@ -15,10 +15,12 @@ published: true
       {{ 'bootstrap.css' | stylesheet_tag }}
       /[if lt IE 9]
         <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-      %link{href: "/samples/favicon.ico", rel: "shortcut icon"}/
-      %link{href: "/samples/apple-touch-icon.png", rel: "apple-touch-icon"}/
-      %link{href: "/samples/apple-touch-icon-72x72.png", rel: "apple-touch-icon", sizes: "72x72"}/
-      %link{href: "/samples/apple-touch-icon-114x114.png", rel: "apple-touch-icon", sizes: "114x114"}/
+      %link{rel: "shortcut icon", href: "/samples/favicon.png"}/
+      %link{rel: "apple-touch-icon-precomposed", sizes: "144x144", href: "/samples/apple-touch-icon-144x144-precomposed.png"}/
+      %link{rel: "apple-touch-icon-precomposed", sizes: "114x114", href: "/samples/apple-touch-icon-114x114-precomposed.png"}/
+      %link{rel: "apple-touch-icon-precomposed", sizes: "72x72", href: "/samples/apple-touch-icon-72x72-precomposed.png"}/
+      %link{rel: "apple-touch-icon-precomposed", href: "/samples/apple-touch-icon-precomposed.png"}/
+
       / CSS code from Bootply.com editor
       :css
         @media screen and (min-width: 992px) {
