--- a/generators/content_type/data/%name%.yml.tt
+++ b/generators/content_type/data/%name%.yml.tt
@@ -1,5 +1,5 @@
 <% 4.times do |i| -%>
-- "Sample <%= i + 1 %>":
+- "Sample <%= i + 1 %>"<%= ':' if config[:fields].size > 1 %>
 <% config[:fields][1..-1].each do |field| -%>
 <% case field.type -%>
 <% when 'string' -%>
