--- a/spec/fixtures/default/app/views/pages/music.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/music.liquid.haml
@@ -35,7 +35,7 @@ position: 2
   {% for s in selected_songs %}
   %p.scoped_song {{ s._label }}
   %p.scoped_song_link
-    %a{ href: "{% url_to s %}" } {{ s._label }}
+    %a{ href: "{% path_to s %}" } {{ s._label }}
   {% endfor %}
   %p.collection_equality {{ contents.songs.all.size }}={{ contents.songs.size }}
 
