update specs for the last commit of the mounter component (34d24feeb8d5576a715e56f76e8a0db1ec17058f), referencing issue locomotivecms/wagon#140 and locomotivecms/wagon#141

--- a/spec/fixtures/default/app/views/pages/index.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/index.liquid.haml
@@ -95,6 +95,6 @@ title: Home page
 
         {% include footer %}
 
-        {% include a_complicated_one %}
+        {% include a_complicated-one %}
 
     {% google_analytics 'UA-20661758-1' %}
