--- a/generators/content_type/data/%name%.yml.tt
+++ b/generators/content_type/data/%name%.yml.tt
@@ -15,9 +15,9 @@
 <% when 'file' -%>
     <%= field.name -%>: null # Path to a file in the public/samples folder or to a remote and external file.
 <% when 'belongs_to' -%>
-    <%= field.name -%>: null # Permalink of the target entry
+    <%= field.name -%>: null # Slug of the target entry
 <% when 'many_to_many' -%>
-    <%= field.name -%>: [] # Permalink of the target entries
+    <%= field.name -%>: [] # Array of target entry slugs
 <% end -%>
 <% end -%>
 
