fix issue #166 (page.title on templatized pages) + with_scope works with dates as integer

--- a/spec/fixtures/default/app/views/pages/index.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/index.liquid.haml
@@ -7,7 +7,7 @@ title: Home page
   %head
     %meta{ :charset => "utf-8" }
 
-    %title {{ site.name }}
+    %title {{ site.name }} | {{ page.title }}
 
     %meta{ :content => "{{ site.meta_description }}", :name => "description" }
     %meta{ :content => "{{ site.meta_keywords }}", :name => "keywords" }
