fix issue #186 (Liquid  and  throws errors)

--- a/spec/fixtures/default/app/views/pages/filtered.liquid.haml
+++ b/spec/fixtures/default/app/views/pages/filtered.liquid.haml
@@ -5,8 +5,12 @@ title: Various uses of the with_scope tag
 {% assign end     = '2012-06-10 23:59:59' %}
 {% assign prices  = '5.0,5.5' | split: ',' | map: 'to_f' %}
 
-{% with_scope date.gte: begin, date.lte: end, city: /Kansas/, state.ne: 'Illinois', tags: 'awesome', tags.nin: 'bad', price.in: prices %}
+{% with_scope date.gte: begin, date.lte: end, city: /Kansas/, state.ne: 'Illinois', tags: 'awesome', tags.nin: 'bad', price.in: prices, order_by: 'price.desc' %}
 events={{ contents.events.count }}.
+{% endwith_scope %}
+
+{% with_scope tags.in: 'awesome', order_by: 'price.desc' %}
+first event={{ contents.events.first.place }}.
 {% endwith_scope %}
 
 {% assign featured = false %}
