--- a/generators/bootstrap2/Gemfile.tt
+++ b/generators/bootstrap2/Gemfile.tt
@@ -2,7 +2,9 @@ source 'https://rubygems.org'
 
 # ruby '1.9.3'
 
-gem 'locomotivecms_wagon', '<%= config[:version] -%>'
+# gem 'locomotivecms_wagon', '<%= config[:version] -%>'
+gem 'locomotivecms_mounter', path: '/Users/didier/Documents/LocomotiveCMS/gems/mounter'
+gem 'locomotivecms_wagon', path: '/Users/didier/Documents/LocomotiveCMS/wagon'
 
 group :development do
   # Mac OS X
