--- a/generators/line_case/config/site.yml.tt
+++ b/generators/line_case/config/site.yml.tt
@@ -6,7 +6,7 @@ name: <%= config[:name] %>
 # The site's subdomain
 # This option is for sites on multi-site engines
 # The value determines where the site can be accessed under the engine's primary domain
-subdomain: <%= config[:name].dasherize.downcase %>
+subdomain: <%= config[:name].gsub(' ', '-').dasherize.downcase %>
 
 # An array of domain aliases for the site
 # This option is for sites on multi-site engines
