by default, bundle install is run for new sites, the skip_bundle option disables this behavior and comments the Gemfile

--- a/generators/line_case/Gemfile.tt
+++ b/generators/line_case/Gemfile.tt
@@ -1,8 +1,6 @@
 source 'https://rubygems.org'
 
-# gem 'locomotivecms_wagon', '<%= config[:version] -%>'
-gem 'locomotivecms_mounter', path: '/Users/didier/Documents/LocomotiveCMS/gems/mounter'
-gem 'locomotivecms_wagon', path: '/Users/didier/Documents/LocomotiveCMS/wagon'
+gem 'locomotivecms_wagon', '<%= config[:version] -%>'
 
 group :development do
   # Mac OS X
