--- a/generators/cloned/Gemfile.tt
+++ b/generators/cloned/Gemfile.tt
@@ -7,7 +7,7 @@ group :development do
   gem 'rb-fsevent', '~> 0.9.1', require: RUBY_PLATFORM.include?('darwin') && 'rb-fsevent'
 
   # Unix
-  gem 'therubyracer', require: 'v8', platforms: :ruby
+  gem 'therubyracer', require: 'v8', platforms: :ruby unless RUBY_PLATFORM.include?('darwin')
   gem 'rb-inotify', '~> 0.9', require: RUBY_PLATFORM.include?('linux') && 'rb-inotify'
 
   # Windows
